# podcast-scrobbler

./: .env.example  .gitignore  README.md  justfile  pyproject.toml
src/: __main__.py  authenticate.py
src/podcast_scrobbler/: __init__.py  authenticate.py  podcast.py  scrobble.py  top.py  types.py
