[project]
name = "podcast-scrobbler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pydantic-settings>=2.12.0", "pylast>=7.0.0", "typer>=0.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scrobble = "podcast_scrobbler:app"
