[project]
name = "podcast-scrobbler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pydantic-settings>=2.12.0", "pylast>=7.0.0", "typer>=0.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]

[project.scripts]
scrobble = "podcast_scrobbler:app"
